--- a/questions-easy.json
+++ b/questions-easy.json
@@ -1,34 +1,86 @@
 [
   {
-    "q": "I want to Lookingg alex odd (Category?)",
-    "a": "Rejected - Reason: Cannot look for gods. or Rejected. Cannot look for admins."
+    "q": "looking for a bacpak 4 lvl.2.2m (Category?)",
+    "a": "Buying max quality backpack space. Budget: $2.2 Million. (Other)"
   },
   {
-    "q": "I am buying a very good house, 2 home whicih have garden and 9Gs,5Wh,and swimming poo price nego (Category?)",
+    "q": "i want to sela my juice business. budget 67000000$ (Category?)",
+    "a": "Selling Juice Shop business. Price: $67 Million. (Business)"
+  },
+  {
+    "q": "i have small party at my home and home no 1048 welcome everyone. (Category?)",
+    "a": "Party at house №1048. (Other)"
+  },
+  {
+    "q": "I wand very good home to buy (Category?)",
+    "a": "Buying a house. Budget: Negotiable. (Real Estate)"
+  },
+  {
+    "q": "I want to R34 full and drif kit. (Category?)",
+    "a": "Buying \"Annis Skyline GT-R (R34)\" in full configuration with drift kit. Budget: Negotiable. (Auto)"
+  },
+  {
+    "q": "I need lawyer asap. (Category?)",
+    "a": "Hiring a lawyer. Salary: Negotiable. (Work)"
+  },
+  {
+    "q": "I want to Lookingg alex odd (Category?)",
+    "a": "Rejected - Reason: Cannot look for gods. or Rejected Reason: Cannot look for gods. or Rejected. Cannot look for gods. or Rejectted - Reason: Cannot look for Admins. or Rejected Reason: Cannot look for Admins. or Reject. Reason: Cannot look for Admins. or Reject. Cannot look for Admins."
+  },
+  {
+    "q": "I am buying a very good house, 2 home whicih have garden and 9Gs,5Wh,and swimming poo price nego (CATAGORY)",
     "a": "Buying 2 houses with gardens, 9 g.s., 5 w.h. and swimming pools. Budget: Negotiable. (Real Estate)"
   },
   {
-    "q": "selling g t r i full drift cit, some upgrade, without insurance and chip tuning part $9000000 (Category?)",
+    "q": "selling g t r i full drift cit, some upgrade, without insurance and chip tuning part $9000000 (CATAGORY)",
     "a": "Selling \"Annis GT-R I\" in full configuration with visual upgrades and tuning parts. Price: $9 Million. (Auto)"
   },
   {
-    "q": "I need some friands (Category?)",
-    "a": "Looking for friends. (Dating)"
+    "q": "I need some friands (CATAGORY)",
+    "a": "Looking for friends.(Dating)"
   },
   {
-    "q": "im a driver and I need job (Category?)",
+    "q": "im a  driver and I need job (CATAGORY)",
     "a": "Looking for a job as a driver. Salary: Negotiable. (Work)"
   },
   {
-    "q": "I planning to buy plantation cabbage 20 space. price: 35000000$ (Category?)",
+    "q": "I planning to buy plantation cabbage 20 space. price: 35000000$ (CATAGORY)",
     "a": "Buying 20-Bed Cabbage Plantation business. Budget: $35 Million. (Business)"
   },
   {
-    "q": "buying high LvL pet price: 600k (Category?)",
+    "q": "buying high LvL pet price: 600k (CATAGORY)",
     "a": "Buying a pet. Budget: $600.000 (Other)"
   },
   {
-    "q": "I need to sell head bags and ropes (Category?)",
-    "a": "Rejected + Blacklisted - Reason: Cannot promote illegal items. or Rejected + Blacklisted. Illegal Items."
+    "q": "I need to sell head bags and ropes (CATAGORY)",
+    "a": "Rejected & Blacklisted: Cannot promote illegal items. or Rejected + Blacklisted - Reason: Cannot promote illegal items. or Rejected Reason: Cannot promote illegal items."
+  },
+  {
+    "q": "buying mg vt full upgrades and max chip tuning parts and drift kit budget10m (Category?)",
+    "a": "Buying \"Benefactor-MG VT\" in full configuration with tuning parts and drift kit. Budget: $10 Million. (Auto)"
+  },
+  {
+    "q": "selling house number 421 with helipad garden swimming pool 5 warehouse 25garage in mirror park (Category?)",
+    "a": "Selling house №421 with a garden, 25 g.s., 5 w.h., helipad and swimming pool in Mirror Park. Price: Negotiable. (Real Estate)"
+  },
+  {
+    "q": "i want to sell max quality backpack, grand tickets and diamonds price 4million 400k 5k each (Category?)",
+    "a": "Selling max quality backpack space, grand tickets and diamonds. Price: $4 Million, $400.000 and $5,000 each respectively. (Other)"
+  },
+  {
+    "q": "buying grilled steak and medkit in bulk (Category?)",
+    "a": "Rejected + Blacklist. ( Reason: Cannot promote food & health items ) or Rejected Reason: Cannot promote food & health items. or Rejected & Blacklisted: Cannot promote food & health items."
+  },
+  {
+    "q": "hiring lvl 3 electrician on construction company site 4 salary 20k per hour (Category?)",
+    "a": "Hiring a electrician with 3 years of experience at construction site №4, in Mirror Park. Salary: $20.000 per hour. (Work)"
+  },
+  {
+    "q": "selling strip club number 3 price 500 mil (Category?)",
+    "a": "Selling Bar No3. Price: $500 Million. (Business)"
+  },
+  {
+    "q": "Feel poor and want to earn money? Then contract Gussy Opium (Office 2673) EASY TASKS AND EASY MONEY up to $64.000 Daily. (Category?)",
+    "a": "(Work) or Feel poor and want to earn money? Then contract Gussy Opium (Office 2673) EASY TASKS AND EASY MONEY up to $64.000 Daily. (Work)"
   }
 ]
